tests/compile-fail/Rule_4_1.rs
fn main() {
    let x = "\x41\x4g";
    //~^ ERROR invalid character in numeric character escape: g
}
